@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r1p7
+  {
+    Modules = LHCbDIRAC:v9r1p7, LHCbWebDIRAC:v4r4p4
+    Depends = DIRAC:v6r19p15
+    LcgVer = v13r0
+  }
+
   v9r1p6
   {
     Modules = LHCbDIRAC:v9r1p6, LHCbWebDIRAC:v4r4p4
